fix gap

--- a/src/components/comment/comment.scss
+++ b/src/components/comment/comment.scss
@@ -7,7 +7,7 @@
 .comment__author {
   display: flex;
   flex-flow: column nowrap;
-  gap: 12px;
+  gap: 14px;
   align-items: center;
 }
 
@@ -18,7 +18,7 @@
 .comment__text {
   display: flex;
   flex-flow: column nowrap;
-  gap: 12px;
+  gap: 10px;
   max-width: 720px;
 }
 
